# mx-platform-python

./: .openapi-generator-ignore  LICENSE  README.md  openapitools.json  pyproject.toml  setup.py  tox.ini
.github/: clean.rb  read_version.rb  version.rb
.openapi-generator/: FILES
docs/: ACHResponse.md  ACHReturnCreateRequest.md  ACHReturnCreateRequestBody.md  ACHReturnResponseBody.md  ACHReturnsResponseBody.md  AccountCreateRequest.md  AccountCreateRequestBody.md  AccountNumberResponse.md  AccountNumbersResponseBody.md  AccountOwnerResponse.md  AccountOwnersResponseBody.md  AccountResponse.md  AccountResponseBody.md  AccountUpdateRequest.md  AccountUpdateRequestBody.md  AccountsApi.md  AccountsResponseBody.md  AchReturnApi.md  AuthorizationCodeRequest.md  AuthorizationCodeRequestBody.md  AuthorizationCodeResponse.md  AuthorizationCodeResponseBody.md  BudgetCreateRequest.md  BudgetCreateRequestBody.md  BudgetResponse.md  BudgetResponseBody.md  BudgetUpdateRequest.md  BudgetUpdateRequestBody.md  BudgetsApi.md  CategoriesApi.md  CategoriesResponseBody.md  CategoryCreateRequest.md  CategoryCreateRequestBody.md  CategoryResponse.md  CategoryResponseBody.md  CategoryUpdateRequest.md  CategoryUpdateRequestBody.md  ChallengeResponse.md  ChallengesResponseBody.md  ConnectWidgetRequest.md  (+211 more)
mx_platform_python/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
openapi/: config.yml
test/: test_account_create_request.py  test_account_create_request_body.py  test_account_number_response.py  test_account_numbers_response_body.py  (+247 more)
(+390 files in other folders)
